# pico

pico-projects/Encoder/: CMakeLists.txt  main.c
pico-projects/Graduation_Project_assembled/: CMakeLists.txt  blink.c  blink.h  calibration.c  calibration.h  encoder.c  encoder.h  lcd.c  lcd.h  main.c  motor.c  motor.h  uart.c  uart.h
pico-projects/Stepper/: CMakeLists.txt  Stepper.cpp
pico-projects/blink/: CMakeLists.txt  blink.cpp
pico-projects/lcd/: CMakeLists.txt  lcd.cpp
pico-projects/oteoLidar/: CMakeLists.txt  oteoLidar.c
pico-projects/oteoLidarV1/: CMakeLists.txt  oteoLidar-v1.c
pico-projects/oteoLidarV2/: CMakeLists.txt  oteoLidar-v2.c
pico-projects/w_blink/: CMakeLists.txt  w_blink.c
